examples/test/testpolicy19419.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19419
  namespace: namespace287
spec:
  podSelector:
    matchLabels:
      key6: value21
      key47: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value27
          key48: value38
      podSelector:
        matchLabels:
          key32: value9
          key7: value24
